# PangaeaApps

./: .gitignore  CMakeLists.txt  Desktop_bundle.pro  README.md
PangaeaBackend/: .qmlls.ini  CMakeLists.txt  threadcontroller.cpp
PangaeaBackend/cores/: core.cpp  core.h  interfacecore.cpp  interfacecore.h  interfacemanager.cpp  interfacemanager.h  netcore.cpp  netcore.h
PangaeaBackend/device/: abstractdevice.cpp  abstractdevice.h  cp100fx.cpp  cp100fx.h  cplegacy.cpp  cplegacy.h  cpmodern.cpp  cpmodern.h  deviceanswer.cpp  deviceanswer.h  deviceparameter.cpp  deviceparameter.h  firmware.cpp  hardwareclassicpreset.cpp  hardwareclassicpreset.h  hardwarefxpreset.h  hardwarepreset.cpp  hardwarepreset.h  irfile.h  lapreamp.cpp  presetabstract.cpp  presetabstract.h  presetfx.cpp  presetfx.h  presetlegacy.cpp  presetlegacy.h  presetmodern.cpp  presetmodern.h
PangaeaBackend/interfaces/: bleinterface.cpp  bleinterface.h  devicedescription.cpp  devicedescription.h  offlineinterface.cpp  offlineinterface.h  usbinterface.cpp  usbinterface.h
PangaeaBackend/mock/: abstractmockdevice.h  mockcp100fx.cpp  mockcp100fx.h  mockcp16legacy.cpp  mockcp16legacy.h  mockcp16modern.cpp  mockcp16modern.h
PangaeaBackend/models/: deviceslistmodel.h  filebrowsermodel.cpp  filebrowsermodel.h  moduleslistmodel.cpp  moduleslistmodel.h  presetlistmodel.cpp  presetlistmodel.h
PangaeaBackend/modules/: abstractmodule.cpp  abstractmodule.h  cabsim.cpp  cabsim.h  chorus.cpp  chorus.h  compressor.cpp  compressor.h  controlfcutlegacy.cpp  controlfcutlegacy.h  controlqlegacy.cpp  controlqlegacy.h  controlvalue.cpp  controlvalue.h  delay.cpp  delay.h  dualcabsim.cpp  dualcabsim.h  earlyreflections.cpp  earlyreflections.h  eqband.cpp  eqband.h  eqparametric.cpp  eqparametric.h  flanger.cpp  flanger.h  hipassfilter.cpp  hipassfilter.h  lowpassfilter.cpp  lowpassfilter.h  mastereq.cpp  mastereq.h  noisegate.cpp  noisegate.h  phaser.cpp  phaser.h  poweramp.cpp  poweramp.h  preamp.cpp  preamp.h  (+14 more)
PangaeaBackend/tests/: CMakeLists.txt
PangaeaBackend/uihelpers/: deviceerrorenum.h  devicemessageenum.h  devicetypeenum.h  filtertypeenum.h  moduletypeenum.h  presetstateenum.h  uiinterfacemanager.cpp  uiinterfacemanager.h  uimessagetype.h
PangaeaBackend/utils/: irworker.cpp  irworker.h  logger.cpp  logger.h  maskedparser.cpp  maskedparser.h  parser.h  presetmanager.h
PangaeaFrontend/: CMakeLists.txt  docs.qrc  main.cpp  uicore.cpp  uicore.h  uisettings.cpp  uisettings.h  version.rc  version.rc.in
PangaeaFrontend/Desktop/: CMakeLists.txt  images.qrc  qml.qrc  translations.qrc
PangaeaFrontend/Mobile/: CMakeLists.txt  Info.plist  qml.qrc
PangaeaFrontend/firmwares/: firmwareCP16.ble
WavConverterLib/: CMakeLists.txt  WavConverterLib.pro  resampler.h  wavutils.cpp  wavutils.h
WavConverterLib/src/: WavConverterLib.pro  resampler.cpp  wavutils.cpp
WavConverterShell/: .gitignore  CMakeLists.txt  WavConverterShell.pro  core.cpp  main.cpp  main.qml  resources.rc
WavConverterShell/MacOS/: Info.plist
WavConverterShell/src/: WavConverterShell.pro  core.h  main.qml  resources.rc
pangaea-backend/: CMakeLists.txt  pangaea-backend.pro
pangaea-backend/cores/: core.cpp  core.cpp~RF99138bb.TMP  core.h  interfacecore.cpp  interfacecore.h  netcore.cpp
pangaea-backend/device/: abstractdevice.cpp  abstractdevice.h  answerworker.cpp  answerworker.h  cplegacy.cpp  cplegacy.cpp~RFc6395e7.TMP  cplegacy.h  cpmodern.cpp  cpmodern.h  device.cpp  device.h  deviceanswer.cpp  deviceanswer.h  devicecontrols.cpp  devicecontrols.h  deviceparameter.cpp  deviceparameter.h  firmware.cpp  firmware.h  hardwarepreset.cpp  hardwarepreset.h  irfile.cpp  lapreamp.cpp  lapreamp.h  preset.cpp  preset.h  presetabstract.cpp  presetabstract.h  presetlegacy.cpp  presetlegacy.h  presetmodern.cpp  presetmodern.h
pangaea-backend/interfaces/: abstractinterface.cpp  abstractinterface.h  bleinterface.cpp  bleinterface.h  devicedescription.h  offlineinterface.cpp  offlineinterface.h  usbinterface.cpp
pangaea-backend/mock/: abstractmockdevice.cpp  abstractmockdevice.h  mockcp16legacy.cpp  mockcp16legacy.h  mockcp16modern.cpp  mockcp16modern.h  mockla3.cpp  mockla3.h
pangaea-backend/models/: deviceslistmodel.cpp  deviceslistmodel.h  moduleslistmodel.cpp  moduleslistmodel.h  presetlistmodel.cpp  presetlistmodel.h
pangaea-backend/modules/: abstractmodule.cpp  abstractmodule.h  cabsim.cpp  chorus.cpp  chorus.h  compressor.cpp  compressor.h  controlqlegacy.cpp  controlqlegacy.h  controlvalue.cpp  controlvalue.h  delay.cpp  earlyreflections.cpp  earlyreflections.h  eqband.cpp  eqband.h  eqparametric.cpp  eqparametric.h  eqresponse.cpp  eqresponse.h  hipassfilter.cpp  hipassfilter.h  lowpassfilter.cpp  lowpassfilter.h  noisegate.cpp  noisegate.h  phaser.cpp  phaser.h  poweramp.cpp  poweramp.h  preamp.cpp  preamp.h  presence.cpp  presence.h  presetvolume.cpp  tremolo.cpp  tremolo.h
pangaea-backend/moduls/: abstractmodule.cpp  abstractmodule.h  eqband.cpp  eqband.h  eqresponse.cpp  eqresponse.h  poweramp.cpp  poweramp.h
pangaea-backend/tests/: CMakeLists.txt  testutils.h  tst_legacydevice.cpp
pangaea-backend/uihelpers/: appproperties.cpp  appproperties.h  controlvalue.cpp  controlvalue.h  deviceErrorEnum.h  deviceclassenum.h  deviceerrorenum.h  devicemessageenum.h  deviceproperties.cpp  deviceproperties.h  devicetypeenum.h  filtertypeenum.h  moduletypeenum.h  presetstateenum.h  uiinterfacemanager.cpp  uiinterfacemanager.h  uimessagetype.h
pangaea-backend/utils/: eqband.cpp  eqband.h  eqresponse.cpp  eqresponse.h  legacyparser.cpp  legacyparser.h  logger.cpp  maskedparser.cpp  maskedparser.h  parser.cpp  parser.h  presetmanager.cpp  presetmanager.h
pangaea-mobile/: .qmlls.ini  CMakeLists.txt  docs.qrc  main.cpp  qml.qrc  threadcontroller.h  uicore.cpp  uicore.h  uisettings.h
pangaea-mobile/android/: AndroidManifest.xml  build.gradle  gradle.properties
pangaea-mobile/cores/: uicore.cpp  uicore.h  uiinterfacemanager.cpp  uiinterfacemanager.h
pangaea-mobile/firmwares/: firmwareCP16.ble  (+1 more)
pangaea_mobile/: CMakeLists.txt  main.cpp  qml.qrc
(+774 files in other folders)
